--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ OPENAI_API_KEY=
 
 YOUTUBE_API_KEY=
 YOUTUBE_PLAYLIST_ID=
-GOOGLE_STORAGE_BUCKET=
+# GOOGLE_STORAGE_BUCKET=
 
 # -----------------------------------------------------------------------------
 # Pinecone Vector Search
@@ -25,4 +25,4 @@ GOOGLE_STORAGE_BUCKET=
 
 PINECONE_API_KEY=
 PINECONE_BASE_URL=
-PINECONE_NAMESPACE=
+# PINECONE_NAMESPACE=
