--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^6.9.4",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
     "@vercel/analytics": "^0.1.11",
     "clsx": "^1.2.1",
     "delay": "^5.0.0",
@@ -79,6 +80,7 @@
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.6",
     "tailwindcss": "^3.2.7",
+    "tsup": "^6.7.0",
     "tsx": "^3.12.6",
     "typescript": "^4.9.5"
   },
